Bug 100182 - ODF export: Index entries lost on save (see comment 17)
Summary: ODF export: Index entries lost on save (see comment 17)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: odf target:5.3.0 target:5.2.2
Keywords: bibisected, dataLoss, regression
: 101617 102352 103059 103354 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-06-02 05:43 UTC by helmut
Modified: 2016-11-18 08:48 UTC (History)
12 users (show)

See Also:
Crash report or crash signature:


Attachments
With Writer-Version 5.1.4.1 I have no Problem (11.12 KB, application/vnd.oasis.opendocument.text)
2016-06-03 20:01 UTC, helmut
Details

Note You need to log in before you can comment on or make changes to this bug.
Description helmut 2016-06-02 05:43:57 UTC
I create or edit an index. Then I store the document. When I load it again, all entries and keywords for index are lost.

Best regards, Helmut Wolff!
Comment 1 raal 2016-06-03 16:39:30 UTC
No repro with Version: 5.3.0.0.alpha0+
Build ID: 86d84ae4bba0d4c45bc13232645318291a8aed75
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-05-26_14:33:24

Please attach test file and write steps how to reproduce. Thanks.
Comment 2 helmut 2016-06-03 20:01:10 UTC
Created attachment 125474 [details]
With Writer-Version 5.1.4.1 I have no Problem
Comment 3 raal 2016-06-04 07:07:32 UTC
steps:
open file
delete  "Inhaltsverzeichnis"
Insert - Table of contents and index - Table of contents
Insert table of contents -  OK
Save, close, reopen

Table of contents is here, no problem
Version: 5.3.0.0.alpha0+
Build ID: 2712fc0869e5ba3b7a1da41e0ce72431d3b0deee
CPU Threads: 1; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-06-02_22:41:55
Comment 4 helmut 2016-06-04 11:41:22 UTC
Dear raal,

I reproduce your decleration, I have no success.

I work with the german Language-Version of LibreOffice.
What Language-Version is yours?
Perhaps the reason is diffrent keywords between diffrent Language-Versions.

Best regards, Helmut!
Comment 5 helmut 2016-06-06 07:15:54 UTC Comment hidden (obsolete)
Comment 6 Buovjaga 2016-06-08 13:51:28 UTC
Helmut: did you use 5.2 beta1 or some other build of 5.2?
Comment 7 helmut 2016-06-08 19:17:24 UTC
To all : I tested with Version 5.2.0.0.beta1 , 5.2.0.0.alpha(x) , also 5.3.0.0.alpha0.

Best regards Helmut!
Comment 8 Joel Madero 2016-06-18 22:13:26 UTC
@Helmut -

Thanks for being super patient. Can you try with a fresh profile? I also cannot reproduce

https://wiki.documentfoundation.org/UserProfile

Bodhi Moksha
LibreOffice Version: 5.3.0.0.alpha0+
Build ID: d534e939d4b9c8ac09cd1e7e28e5ad43d1ee56ec
CPU Threads: 2; OS Version: Linux 3.16; UI Render: default; 
Locale: en-US (en_US.UTF-8)
Comment 9 helmut 2016-06-19 06:20:25 UTC
To all,

My OS is "Windows 8.1 64Bit".
My Localisation of LibreOffice is "de-DE (de_DE)".
Userprofile I've refreshed, before I tested.

Notice:
Version till 5.1.5.0.a0 is ok.
Version 5.2.x and above is not ok.

Best regards, Helmut Wolff!
Comment 10 helmut 2016-06-23 06:40:31 UTC Comment hidden (obsolete)
Comment 11 helmut 2016-08-06 21:40:16 UTC
To all,

I've just tested with Version 5.2.1.0.a0 - It's failed too.
My Question is: What's the diffrenz between "5.1.x.x" and "5.2.x.x and above"?

Best regards, Helmut Wolff!
Comment 12 Buovjaga 2016-08-07 09:32:46 UTC
(In reply to wolff-ohlenberg from comment #11)
> My Question is: What's the diffrenz between "5.1.x.x" and "5.2.x.x and
> above"?

The difference is many new features and also some fixes. Not all fixes get backported from the freshest release to the "still" branch.
Comment 13 helmut 2016-08-08 21:14:10 UTC
To all,

How I can create an Index successfully with versions 5.2.x and above?

Best regards, Helmut Wolff!
Comment 14 Buovjaga 2016-08-09 05:57:29 UTC
Helmut: if you keep changing the status to NEEDINFO, you will be sabotaging the chances of anyone looking at your report. NEEDINFO is only meant for *the reporter*, when they are asked a question.
Comment 15 helmut 2016-08-09 06:14:04 UTC
To all,

Sorry for setting status on NEEDINFO.

How I can create an Index successfully with versions 5.2.x and above?
My problem: My Indexes are not saving.

Best regards, Helmut Wolff!
Comment 16 Buovjaga 2016-08-09 11:09:22 UTC
I tried with German UI and no problem.

Version: 5.2.0.4 (x64)
Build-ID: 066b007f5ebcc236395c7d282ba488bca6720265
CPU-Threads: 4; BS-Version: Windows 6.1; UI-Render: Standard; 
Gebietsschema: fi-FI (fi_FI)
Comment 17 NDG 2016-08-31 14:51:38 UTC
I can reproduce on Windows v 5.2.0.4

How to reproduce:
- Open file in Writer
- Select a word
- Insert > Table of Contents and Index > Index Entry
- Click Insert button
- Save and close
- Reopen file
- Index entries are now missing (ie. not tagged as index entries)

This bug seems to wipe index entries from any file which contained them, including files produced in previous versions and not resaved in this one.  

Since files can contain hundreds or thousands of index entries, and since it is not immediately obvious that the entries have been wiped from the file (you have to be observant enough to spot that the field shadings are missing, or you have to update the alphabetical index), this bug has the potential to wipe out many hours of work.

My system:

Version: Windows v 5.2.0.4
OS: Windows 10
Settings: works with 'vanilla' settings on new installation
Comment 18 NDG 2016-08-31 14:52:45 UTC
See also this bug report of the same issue in the libreoffice package for Ubuntu:

https://bugs.launchpad.net/ubuntu/+source/libreoffice/+bug/1613507
Comment 19 Buovjaga 2016-08-31 15:04:52 UTC
(In reply to NDG from comment #17)
> How to reproduce:
> - Open file in Writer
> - Select a word
> - Insert > Table of Contents and Index > Index Entry
> - Click Insert button
> - Save and close
> - Reopen file
> - Index entries are now missing (ie. not tagged as index entries)

Oh dear, you are right :(

Arch Linux 64-bit, KDE Plasma 5
Version: 5.2.0.4
Build ID: 5.2.0-1
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: c7fd6532682a12d8981e6b19b4fbb75d6d3c412c
CPU Threads: 8; OS Version: Linux 4.7; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on August 30th 2016
Comment 20 Xisco Faulí 2016-08-31 21:29:31 UTC
Issue introduced in range 7289a140fc68dc898ba2b2357cc960968195f236..766524b13b3e69cc16cf19b826f62222d7f15ea5
Comment 21 Caolán McNamara 2016-09-01 10:48:55 UTC
problem commit appears to be 3e6ba91e2d6d362f4af91566e740f5dbc310e026
Comment 22 Commit Notification 2016-09-01 10:55:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9292ca07dd3f9ee9dedd765ba7696a626bc25476

Resolves: tdf#100182 index entries lost on save

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Commit Notification 2016-09-01 13:04:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=92b384b197b8f6c85127e277b10e09936d0c6021&h=libreoffice-5-2

Resolves: tdf#100182 index entries lost on save

It will be available in 5.2.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Xisco Faulí 2016-09-01 13:42:13 UTC
*** Bug 101617 has been marked as a duplicate of this bug. ***
Comment 25 NDG 2016-09-26 22:41:57 UTC
I have now installed prerelease 5.2.2.2 (Build ID: 8f96e87c890bf8fa77463cd4b640a2312823f3ad).  

I can verify that alphabetical index entries no longer disappear when a file is saved and reopened.  The bug appears to have been fixed.

Thank you very much indeed for you care, attention and good work in resolving this issue.  Well done!
Comment 26 Buovjaga 2016-09-27 04:38:25 UTC
Yep, verified fixed in 5.3 as well.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: 3be5deadcb46e09d84d99b2b108b65b06ff356e9
CPU Threads: 8; OS Version: Linux 4.7; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on September 24th 2016
Comment 27 George Guitar 2016-09-29 21:53:18 UTC
Hi,

I'm a teacher and I have given LibreOffice to all my students:

Versión: 5.2.1.2
Id. de compilación: 31dd62db80d4e60af04904455ec9c9219178d620
Subprocesos de CPU: 1; Versión de SO: Windows 5.1; Renderizado de IU: predeterminado; 
Configuración regional: es-BO (es_BO); Calc: group

Every time the students setup the index entries they are gone after save. It's impossible to use that really important feature!

I could not find information about this problem on the net except here. From what I read, I have to download a patch, I downloaded this file:

Index of /daily/libreoffice-5-2/Win-x86@62-merge-TDF/current:
libreoffice-5-2~2016-09-28_16.00.05_LibreOfficeDev_5.2.3.0.0_Win_x86_sdk.msi       

After install it didn't fix the problem, I read that the problem is already fixed, but how can I fix it? what file should I download in order to fix the problem? 

Should I tell the students to change LibreOffice version?
Please help me the students are very disappointed with this experience.

Thank you!
Comment 28 NDG 2016-09-29 22:36:11 UTC
Since this bug is continuing to cause confusion, I would like to post the following workaround.  These are generic instructions – your operating system might have slightly different ways of doing things (eg. using a Linux package manager), but hopefully the general principle will make sense.

Workaround
- Go to the main LibreOffice download site at https://www.libreoffice.org/download/libreoffice-fresh/
- Scroll down to the heading "Available Versions".
- If a version starting with 5.3 (or any version higher than that) is available as a 'released' version (not a 'development' version), download that.*
- If there is no version 5.3 or higher, download version 5.1.5.
- Uninstall LibreOffice 5.2.x (where x is some version number).
- Install LibreOffice 5.1.5 in its place.
- Follow the steps in Comment 17 (above) to see if the problem still occurs.  It should not occur now.

What's going on here:
- The bug described on this page exists only in LibreOffice 5.2.x.  Any other version of LibreOffice should not have the bug.

*note: at time of writing, this version is no yet available, but it will be available in the future
Comment 29 Buovjaga 2016-09-30 06:59:34 UTC
George: you installed the *SDK*, not the actual LibreOffice: LibreOfficeDev_5.2.3.0.0_Win_x86_sdk.msi <- this is the wrong file.

This would have been the correct file: http://dev-builds.libreoffice.org/daily/libreoffice-5-2/Win-x86@62-merge-TDF/current/libreoffice-5-2~2016-09-28_16.00.05_LibreOfficeDev_5.2.3.0.0_Win_x86_en-US_de_ar_ja_ru_qtz.msi
Comment 30 Buovjaga 2016-10-09 13:58:09 UTC
*** Bug 102352 has been marked as a duplicate of this bug. ***
Comment 31 Buovjaga 2016-10-29 19:38:20 UTC
*** Bug 103354 has been marked as a duplicate of this bug. ***
Comment 32 V Stuart Foote 2016-11-17 20:10:33 UTC
*** Bug 103059 has been marked as a duplicate of this bug. ***
Comment 33 Buovjaga 2016-11-18 08:48:23 UTC Comment hidden (obsolete)