Resolves: tdf#100182 index entries lost on save

regression from...

commit 3e6ba91e2d6d362f4af91566e740f5dbc310e026
Date:   Wed Nov 25 10:53:40 2015 +0200

    loplugin:unusedfields in include/xmloff

    Change-Id: I979743671e9a2e868d815f917427588b7b0320ba

which removed ctor for sDocumentIndexMark and sDocumentIndex
when it should have just removed sDocumentIndeb

Change-Id: I5ed5a2d30a3f76c6b45bbf74a3720420d0fcf676
(cherry picked from commit 9292ca07dd3f9ee9dedd765ba7696a626bc25476)
Reviewed-on: https://gerrit.libreoffice.org/28588
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit 92b384b197b8f6c85127e277b10e09936d0c6021)